# Tickup

./: .gitignore  Makefile  README.md  README_category.md  README_tinysword.md  readme_games.md  readme_games_tournaments.md  readme_notifiche.md  run.sh
analisi/: README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  deps.py
backend/app/api/v1/routers/: pool.py  prize.py  purchase.py  ticket.py  user.py  wallet.py
backend/app/clients/: supabase.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: pool.py  pool_like.py  prize.py  prize_image.py  purchase.py  ticket.py  tournament.py  tournament_phase.py  user.py  wallet.py
backend/app/schemas/: pool.py  prize.py  prize_image.py  purchase.py  ticket.py  user.py  wallet.py
backend/app/services/: pool.py  pool_like.py  prize.py  prize_image.py  purchase.py  ticket.py  tournament_orchestrator.py  user.py  wallet.py
backend/scripts/: add_user.py  jwt_verifier.py
backend/sql/: buy_ticket.sql
frontend/: README.md  pubspec.yaml
frontend/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
frontend/android/app/: build.gradle.kts
frontend/assets/tiles/: Level-01  Level-02.tmx  Level-03.tmx  Level-04.tmx  Level-05.tmx  Pixel Adventure.tiled-session  Pixel_Adventure  Pixel_Adventure.tiled-session  trap_template.tmx
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart  pixel_adventure.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
(+231 files in other folders)
